# django-github-webhooks

./: .bumpversion.cfg  .gitignore  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  release.yml  tests.yml
docs/: advanced_user_guide.rst  conf.py  configuration.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
github_webhooks/: __init__.py  apps.py  constants.py  settings.py  signals.py  urls.py  utils.py  views.py
requirements/: dev.txt  tests.txt
tests/: test_constants.py  test_settings.py  test_urls.py  test_utils.py  test_views.py
tests/test_app/: settings.py  urls.py
