[bumpversion]
current_version = 1.0.0
commit = True
tag = True
message = 🔖 Bump version: {current_version} → {new_version}

[metadata]
name = django-github-webhooks
version = 0.1
description = GitHub webhooks for Django.
long_description = file: README.rst
url = https://github.com/OpenWiden/django-github-webhooks
author = stefanitsky
author_email = stefanitsky.mozdor@gmail.com
license = MIT
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:github_webhooks/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
